samples/_failures_safe/1761492421_87dac7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_516804dd.c: In function ‘parser_parse_term’:
./samples/SAFE/__tmp_516804dd.c:156:24: error: expected ‘;’ at end of input
  156 |                 fprintf
      |                        ^
      |                        ;
./samples/SAFE/__tmp_516804dd.c:156:17: error: expected declaration or statement at end of input
  156 |                 fprintf
      |                 ^~~~~~~
./samples/SAFE/__tmp_516804dd.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_516804dd.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_516804dd.c:156:17: error: expected declaration or statement at end of input
